--- a/requirements.txt
+++ b/requirements.txt
@@ -1,444 +1,47 @@
-absl-py==2.0.0
-accelerate==0.28.0
-aenum==3.1.15
-affine==2.3.1
-alabaster @ file:///home/ktietz/src/ci/alabaster_1611921544520/work
-altair==4.2.0
-altgraph==0.17.2
-anaconda-anon-usage @ file:///C:/b/abs_4cqo3nmgh0/croot/anaconda-anon-usage_1694468596737/work
-anaconda-client==1.7.2
-anaconda-navigator==2.4.3
-anaconda-project @ file:///tmp/build/80754af9/anaconda-project_1610472525955/work
-annotated-types==0.6.0
-anyio==4.2.0
-appdirs==1.4.4
-apricot-select==0.6.1
-argh==0.26.2
-argon2-cffi @ file:///C:/ci/argon2-cffi_1613037959010/work
-asgiref==3.7.2
-asn1crypto @ file:///tmp/build/80754af9/asn1crypto_1596577642040/work
-astroid @ file:///C:/ci/astroid_1613501047216/work
-astropy @ file:///C:/ci/astropy_1617745647203/work
+absl-py==2.1.0
 astunparse==1.6.3
-async-generator @ file:///home/ktietz/src/ci/async_generator_1611927993394/work
-atomicwrites==1.4.0
-attrs @ file:///tmp/build/80754af9/attrs_1604765588209/work
-autopep8 @ file:///tmp/build/80754af9/autopep8_1615918855173/work
-Babel @ file:///tmp/build/80754af9/babel_1607110387436/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-backports.functools-lru-cache @ file:///tmp/build/80754af9/backports.functools_lru_cache_1618170165463/work
-backports.shutil-get-terminal-size @ file:///tmp/build/80754af9/backports.shutil_get_terminal_size_1608222128777/work
-backports.tempfile @ file:///home/linux1/recipes/ci/backports.tempfile_1610991236607/work
-backports.weakref==1.0.post1
-backports.zoneinfo==0.2.1
-bcrypt @ file:///C:/ci/bcrypt_1597936263757/work
-beautifulsoup4 @ file:///home/linux1/recipes/ci/beautifulsoup4_1610988766420/work
-bitarray @ file:///C:/ci/bitarray_1618435038389/work
-bkcharts==0.2
-black==19.10b0
-bleach @ file:///tmp/build/80754af9/bleach_1612211392645/work
-blis==0.7.11
-bokeh @ file:///C:/ci/bokeh_1620784067744/work
-boto==2.49.0
-Bottleneck==1.3.2
-brotlipy==0.7.0
-buildozer==1.5.0
-cachetools==5.2.0
-capstone==5.0.1
-catalogue==2.0.10
-certifi==2020.12.5
-cffi @ file:///C:/ci/cffi_1613247279197/work
-chardet @ file:///C:/ci/chardet_1607690654534/work
-charset-normalizer==2.1.1
-chess==1.9.4
-classes==0.4.1
-click @ file:///home/linux1/recipes/ci/click_1610990599742/work
-click-plugins==1.1.1
-cligj==0.7.2
-cloudpathlib==0.16.0
-cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1598884132938/work
-clyent==1.2.2
+certifi==2024.6.2
+charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
-colored-traceback==0.3.0
-comtypes==1.1.9
-conda==4.12.0
-conda-build==3.21.4
-conda-content-trust @ file:///tmp/build/80754af9/conda-content-trust_1617045594566/work
-conda-package-handling @ file:///C:/ci/conda-package-handling_1618262320430/work
-conda-repo-cli @ file:///tmp/build/80754af9/conda-repo-cli_1620168426516/work
-conda-token @ file:///tmp/build/80754af9/conda-token_1620076980546/work
-conda-verify==3.4.2
-confection==0.1.4
-contextlib2==0.6.0.post1
-cryptography @ file:///C:/ci/cryptography_1616769344312/work
-cs50==7.0.2
-cycler==0.10.0
-cymem==2.0.8
-Cython==0.29.19
-cytoolz==0.11.0
-dask @ file:///tmp/build/80754af9/dask-core_1617390489108/work
-decorator @ file:///tmp/build/80754af9/decorator_1617916966915/work
-decouple==0.0.7
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-diff-match-patch @ file:///tmp/build/80754af9/diff-match-patch_1594828741838/work
-distlib==0.3.6
-distributed @ file:///C:/ci/distributed_1617384289923/work
-distro==1.8.0
-Django==4.2.9
-docopt==0.6.2
-docstring-auditor==0.1.15
-docstring-extractor==0.4.0
-docstring-gen==0.3.0
-docstring_parser==0.7.3
-docutils @ file:///C:/ci/docutils_1617481617511/work
-duolingo-api==0.5.4
-entrypoints==0.3
-et-xmlfile==1.0.1
-exceptiongroup==1.2.0
-Faker==13.3.4
-fastcache==1.1.0
-fastjsonschema==2.19.1
-filelock==3.9.0
-flake8 @ file:///tmp/build/80754af9/flake8_1615834841867/work
-Flask @ file:///home/ktietz/src/ci/flask_1611932660458/work
-flatbuffers==23.5.26
-flickrapi==2.4.0
-fsspec==2024.3.1
-future==0.18.2
-gast==0.4.0
-gevent @ file:///C:/ci/gevent_1616773090559/work
-glob2 @ file:///home/linux1/recipes/ci/glob2_1610991677669/work
-google-api-core==2.16.2
-google-api-python-client==2.124.0
-google-auth==2.23.3
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==0.4.6
-google-cloud-aiplatform==1.40.0
-google-cloud-bigquery==3.17.2
-google-cloud-core==2.4.1
-google-cloud-resource-manager==1.12.1
-google-cloud-storage==2.14.0
-google-crc32c==1.5.0
+flatbuffers==24.3.25
+gast==0.5.4
 google-pasta==0.2.0
-google-resumable-media==2.7.0
-googleapis-common-protos==1.62.0
-greenlet @ file:///C:/ci/greenlet_1611958565931/work
-grpc-google-iam-v1==0.13.0
-grpcio==1.60.1
-grpcio-status==1.60.1
-h11==0.14.0
-h5py==2.10.0
-HeapDict==1.0.1
-hmmlearn==0.3.2
-html5lib @ file:///tmp/build/80754af9/html5lib_1593446221756/work
-httpcore==1.0.2
-httplib2==0.22.0
-httpx==0.26.0
-huggingface-hub==0.22.2
-idna @ file:///home/linux1/recipes/ci/idna_1610986105248/work
-imagecodecs @ file:///C:/ci/imagecodecs_1617996768495/work
-imageio @ file:///tmp/build/80754af9/imageio_1617700267927/work
-imagesize @ file:///home/ktietz/src/ci/imagesize_1611921604382/work
-imgaug==0.4.0
-import-ipynb==0.1.4
-importlib-metadata==6.8.0
-iniconfig @ file:///home/linux1/recipes/ci/iniconfig_1610983019677/work
-instaloader==4.9.6
-intervaltree @ file:///tmp/build/80754af9/intervaltree_1598376443606/work
-ipykernel @ file:///C:/ci/ipykernel_1596190155316/work/dist/ipykernel-5.3.4-py3-none-any.whl
-ipynbname==2023.2.0.0
-ipyparams==0.2.1
-ipython @ file:///C:/ci/ipython_1617121002983/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1610481889018/work
-isort @ file:///tmp/build/80754af9/isort_1616355431277/work
-itsdangerous @ file:///home/ktietz/src/ci/itsdangerous_1611932585308/work
-jdcal==1.4.1
-jedi @ file:///C:/ci/jedi_1606914528444/work
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1612213139570/work
-joblib==1.4.0
-JPype1==1.4.1
-json5==0.9.5
-jsonlines==4.0.0
-jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
-jupyter==1.0.0
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1616770841739/work
-jupyter-console @ file:///tmp/build/80754af9/jupyter_console_1616615302928/work
-jupyter-contrib-core==0.4.2
-jupyter-contrib-nbextensions==0.7.0
-jupyter-core @ file:///C:/ci/jupyter_core_1612213356021/work
-jupyter-highlight-selected-word==0.2.0
-jupyter-nbextensions-configurator==0.6.3
-jupyter-packaging @ file:///tmp/build/80754af9/jupyter-packaging_1613502826984/work
-jupyter-server @ file:///C:/ci/jupyter_server_1616084298403/work
-jupyterlab @ file:///tmp/build/80754af9/jupyterlab_1619133235951/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-server @ file:///tmp/build/80754af9/jupyterlab_server_1617134334258/work
-jupyterlab-widgets @ file:///tmp/build/80754af9/jupyterlab_widgets_1609884341231/work
-keras==2.11.0
-keyring @ file:///C:/ci/keyring_1614616910860/work
-Kivy==2.1.0
-kivy-deps.angle==0.3.3
-kivy-deps.glew==0.3.1
-kivy-deps.gstreamer==0.3.3
-kivy-deps.sdl2==0.4.5
-Kivy-Garden==0.1.5
-kivymd==1.1.1
-kiwisolver @ file:///C:/ci/kiwisolver_1612282606037/work
-langcodes==3.4.0
-language_data==1.2.0
-lazy-object-proxy @ file:///C:/ci/lazy-object-proxy_1616529307648/work
-libarchive-c @ file:///tmp/build/80754af9/python-libarchive-c_1617780486945/work
-libclang==16.0.6
-llvmlite==0.36.0
-locket==0.2.1
-lxml @ file:///C:/ci/lxml_1616443455957/work
-Mako==1.2.4
-marisa-trie==1.1.1
-Markdown==3.5
+grpcio==1.64.1
+h5py==3.11.0
+idna==3.7
+joblib==1.4.2
+keras==3.3.3
+libclang==18.1.1
+Markdown==3.6
 markdown-it-py==3.0.0
-MarkupSafe==1.1.1
-matplotlib @ file:///C:/ci/matplotlib-suite_1613408055530/work
-mccabe==0.6.1
+MarkupSafe==2.1.5
 mdurl==0.1.2
-memory-profiler==0.61.0
-menuinst==1.4.16
-mistune==0.8.4
-mkl-fft==1.3.0
-mkl-random @ file:///C:/ci/mkl_random_1618854156666/work
-mkl-service==2.3.0
-mobilechelonian==0.5
-mock @ file:///tmp/build/80754af9/mock_1607622725907/work
-more-itertools @ file:///tmp/build/80754af9/more-itertools_1613676688952/work
-mpmath==1.2.1
-msgpack @ file:///C:/ci/msgpack-python_1612287368835/work
-multipledispatch==0.6.0
-murmurhash==1.0.10
-mypy-extensions==0.4.3
-mysql-connector-python==8.1.0
-navigator-updater==0.2.1
-nbclassic @ file:///tmp/build/80754af9/nbclassic_1616085367084/work
-nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
-nbconvert @ file:///C:/ci/nbconvert_1601914925608/work
-nbformat==5.9.2
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
-networkx==3.1
+ml-dtypes==0.3.2
+namex==0.0.8
 nltk==3.8.1
-nose @ file:///tmp/build/80754af9/nose_1606773131901/work
-notebook @ file:///C:/ci/notebook_1616443715883/work
-num2word==1.0.1
-num2words==0.5.10
-numba @ file:///C:/ci/numba_1616774458845/work
-numexpr @ file:///C:/ci/numexpr_1618856738664/work
-numpy==1.22.4
-numpydoc @ file:///tmp/build/80754af9/numpydoc_1605117425582/work
-oauthlib==3.2.2
-olefile==0.46
-openai==1.9.0
-opencv-python==4.6.0.66
-openpyxl @ file:///tmp/build/80754af9/openpyxl_1615411699337/work
+numpy==1.26.4
 opt-einsum==3.3.0
-packaging @ file:///tmp/build/80754af9/packaging_1611952188834/work
-pandas @ file:///C:/ci/pandas_1618365634936/work
-pandocfilters @ file:///C:/ci/pandocfilters_1605102497129/work
-paramiko @ file:///tmp/build/80754af9/paramiko_1598886428689/work
-parso==0.7.0
-partd @ file:///tmp/build/80754af9/partd_1618000087440/work
-path @ file:///C:/ci/path_1614022440181/work
-pathlib2 @ file:///C:/ci/pathlib2_1607025069150/work
-pathspec==0.7.0
-patsy==0.5.1
-pefile==2022.5.30
-pep8==1.7.1
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-Pillow @ file:///C:/ci/pillow_1617386341487/work
-pkginfo==1.7.0
-platformdirs==2.6.2
-pluggy @ file:///C:/ci/pluggy_1615976358795/work
-plumbum==1.8.2
-ply==3.11
-pomegranate==1.0.4
-preshed==3.0.9
-prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1618088486455/work
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1616415428029/work
-proto-plus==1.23.0
-protobuf==4.25.2
-psutil @ file:///C:/ci/psutil_1612298324802/work
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pwn==1.0
-pwntools==4.11.0
-py @ file:///tmp/build/80754af9/py_1607971587848/work
-py2exe==0.13.0.0
-py4j==0.10.9.7
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycairo==1.24.0
-pycipher==0.5.2
-pycodestyle @ file:///home/ktietz/src/ci_mi/pycodestyle_1612807597675/work
-pycosat==0.6.3
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-pycryptodome==3.18.0
-pycurl==7.43.0.6
-pydantic==2.5.3
-pydantic_core==2.14.6
-pydocstyle @ file:///tmp/build/80754af9/pydocstyle_1616182067796/work
-pyelftools==0.30
-pyerfa @ file:///C:/ci/pyerfa_1619391071834/work
-pyflakes @ file:///home/ktietz/src/ci_ipy2/pyflakes_1612551159640/work
-pygal==3.0.0
-pygame==2.1.2
-Pygments==2.17.2
-pyinstaller==5.7.0
-pyinstaller-hooks-contrib==2022.8
-PyJWT @ file:///C:/ci/pyjwt_1657529430378/work
-pylint @ file:///C:/ci/pylint_1617136058775/work
-pyls-black @ file:///tmp/build/80754af9/pyls-black_1607553132291/work
-pyls-spyder @ file:///tmp/build/80754af9/pyls-spyder_1613849700860/work
-PyNaCl @ file:///C:/ci/pynacl_1595000047588/work
-pyodbc===4.0.0-unsupported
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
-pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
-PyPDF2==3.0.1
-pypiwin32==223
-pypyodbc==1.3.6
-pyreadline==2.1
-pyrsistent @ file:///C:/ci/pyrsistent_1600141795814/work
-pyserial==3.5
-PySocks @ file:///C:/ci/pysocks_1605287845585/work
-pyspark==3.5.0
-pytest==6.2.3
-python-dateutil @ file:///home/ktietz/src/ci/python-dateutil_1611928101742/work
-python-dotenv==1.0.0
-python-jsonrpc-server @ file:///tmp/build/80754af9/python-jsonrpc-server_1600278539111/work
-python-language-server @ file:///tmp/build/80754af9/python-language-server_1607972495879/work
-pyttsx3==2.90
-pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
-PyWavelets @ file:///C:/ci/pywavelets_1601658407916/work
-pywin32==227
-pywin32-ctypes==0.2.0
-pywinpty==0.5.7
-PyYAML==5.4.1
-pyzmq==20.0.0
-QDarkStyle==2.8.1
-QtAwesome @ file:///tmp/build/80754af9/qtawesome_1615991616277/work
-qtconsole @ file:///tmp/build/80754af9/qtconsole_1616775094278/work
-QtPy==1.9.0
-regex==2024.4.28
-requests==2.28.1
-requests-oauthlib==1.3.1
-requests-toolbelt==0.10.1
-rich==13.7.0
-rope @ file:///tmp/build/80754af9/rope_1602264064449/work
-ROPGadget==7.4
-rpyc==5.3.1
-rsa==4.9
-Rtree @ file:///C:/ci/rtree_1618421009405/work
-ruamel-yaml-conda @ file:///C:/ci/ruamel_yaml_1616016967756/work
-safetensors==0.4.2
-scikit-image==0.18.1
-scikit-learn==1.3.2
-scipy @ file:///C:/ci/scipy_1618856128765/work
-seaborn @ file:///tmp/build/80754af9/seaborn_1608578541026/work
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1607525499227/work
-sh==1.14.2
-shapely==2.0.0
-shellingham==1.5.4
-simplegeneric==0.8.1
-singledispatch @ file:///tmp/build/80754af9/singledispatch_1614366001199/work
-sip==4.19.13
-six @ file:///C:/ci/six_1605187374963/work
-smart-open==6.4.0
-sniffio @ file:///C:/ci/sniffio_1614030707456/work
-snowballstemmer @ file:///tmp/build/80754af9/snowballstemmer_1611258885636/work
-snuggs==1.4.7
-sortedcollections @ file:///tmp/build/80754af9/sortedcollections_1611172717284/work
-sortedcontainers @ file:///tmp/build/80754af9/sortedcontainers_1606865132123/work
-soupsieve @ file:///tmp/build/80754af9/soupsieve_1616183228191/work
-spacy==3.7.4
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-Sphinx @ file:///tmp/build/80754af9/sphinx_1620777493457/work
-sphinxcontrib-applehelp @ file:///home/ktietz/src/ci/sphinxcontrib-applehelp_1611920841464/work
-sphinxcontrib-devhelp @ file:///home/ktietz/src/ci/sphinxcontrib-devhelp_1611920923094/work
-sphinxcontrib-htmlhelp @ file:///home/ktietz/src/ci/sphinxcontrib-htmlhelp_1611920974801/work
-sphinxcontrib-jsmath @ file:///home/ktietz/src/ci/sphinxcontrib-jsmath_1611920942228/work
-sphinxcontrib-qthelp @ file:///home/ktietz/src/ci/sphinxcontrib-qthelp_1611921055322/work
-sphinxcontrib-serializinghtml @ file:///home/ktietz/src/ci/sphinxcontrib-serializinghtml_1611920755253/work
-sphinxcontrib-websupport @ file:///tmp/build/80754af9/sphinxcontrib-websupport_1597081412696/work
-spyder @ file:///C:/ci/spyder_1616776239898/work
-spyder-kernels @ file:///C:/ci/spyder-kernels_1614030842607/work
-SQLAlchemy @ file:///C:/ci/sqlalchemy_1618090063261/work
-sqlparse==0.4.2
-srsly==2.4.8
-statsmodels==0.12.2
-swifter==1.4.0
-sympy @ file:///C:/ci/sympy_1618255511605/work
-tables==3.6.1
-tabula-py==2.8.2
-tblib @ file:///tmp/build/80754af9/tblib_1597928476713/work
-tenacity==8.2.3
-tensorboard==2.11.2
+optree==0.11.0
+packaging==24.1
+protobuf==4.25.3
+Pygments==2.18.0
+regex==2024.5.15
+requests==2.32.3
+rich==13.7.1
+scikit-learn==1.5.0
+scipy==1.13.1
+setuptools==70.1.0
+six==1.16.0
+tensorboard==2.16.2
 tensorboard-data-server==0.7.2
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.11.0
-tensorflow-estimator==2.13.0
-tensorflow-intel==2.11.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==1.1.0
-terminado==0.9.4
-testpath @ file:///home/ktietz/src/ci/testpath_1611930608132/work
-textblob==0.18.0.post0
-textdistance @ file:///tmp/build/80754af9/textdistance_1612461398012/work
-thinc==8.2.3
-threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
-three-merge @ file:///tmp/build/80754af9/three-merge_1607553261110/work
-tifffile @ file:///tmp/build/80754af9/tifffile_1619636090847/work
-tokenizers==0.15.2
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-toolz @ file:///home/linux1/recipes/ci/toolz_1610987900194/work
-torch==2.2.2
-tornado @ file:///C:/ci/tornado_1606942392901/work
-tqdm @ file:///tmp/build/80754af9/tqdm_1615925068909/work
-traitlets==5.9.0
-transformers==4.39.3
-tweepy==4.11.0
-typed-ast @ file:///C:/ci/typed-ast_1610466535590/work
-typer==0.9.0
-typing==3.7.4.3
-typing_extensions==4.9.0
-tzdata==2023.4
-ujson @ file:///C:/ci/ujson_1611241570789/work
-unicodecsv==0.14.1
-unicorn==2.0.1.post1
-Unidecode==1.3.6
-uritemplate==4.1.1
-urllib3 @ file:///tmp/build/80754af9/urllib3_1615837158687/work
-vega-datasets==0.9.0
-virtualenv==20.17.1
-wasabi==1.1.2
-watchdog @ file:///C:/ci/watchdog_1612471251191/work
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
-weasel==0.3.4
-webencodings==0.5.1
-Werkzeug @ file:///home/ktietz/src/ci/werkzeug_1611932622770/work
-wget==3.2
-widgetsnbextension==3.5.1
-win-inet-pton @ file:///C:/ci/win_inet_pton_1605306167264/work
-win-unicode-console==0.5
-wincertstore==0.2
-word-image==0.1.3
-word2number==1.1
-wordnik==2.1.3
-wordnik-py3==2.1.2
-wrapt==1.12.1
-xlrd @ file:///tmp/build/80754af9/xlrd_1608072521494/work
-XlsxWriter @ file:///tmp/build/80754af9/xlsxwriter_1617224712951/work
-xlwings==0.23.0
-xlwt==1.3.0
-xmltodict==0.12.0
-yapf @ file:///tmp/build/80754af9/yapf_1615749224965/work
-zict==2.0.0
-zipp @ file:///tmp/build/80754af9/zipp_1615904174917/work
-zope.event==4.5.0
-zope.interface @ file:///C:/ci/zope.interface_1616357322857/work
+tensorflow==2.16.1
+tensorflow-intel==2.16.1
+termcolor==2.4.0
+threadpoolctl==3.5.0
+tqdm==4.66.4
+typing_extensions==4.12.2
+urllib3==2.2.2
+Werkzeug==3.0.3
+wheel==0.43.0
+wrapt==1.16.0
