--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,132 @@
-absl-py==2.1.0
-astunparse==1.6.3
-certifi==2024.6.2
+aiosqlite==0.19.0
+annotated-types==0.6.0
+anyio==4.0.0
+anything==0.2.1
+arrow==1.2.3
+asgiref==3.7.2
+attrs==23.1.0
+autobahn==20.12.3
+Automat==22.10.0
+black==23.11.0
+blis==0.7.11
+catalogue==2.0.10
+certifi==2023.11.17
+cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 cloudpathlib==0.18.1
 colorama==0.4.6
-flatbuffers==24.3.25
-gast==0.5.4
-google-pasta==0.2.0
-grpcio==1.64.1
-h5py==3.11.0
-idna==3.7
-joblib==1.4.2
-keras==3.3.3
-libclang==18.1.1
-Markdown==3.6
+constantly==23.10.4
+contourpy==1.1.0
+cryptography==41.0.5
+cycler==0.11.0
+cymem==2.0.8
+dill==0.3.7
+distlib==0.3.8
+Django==4.1.13
+django-classy-tags==4.1.0
+django-filter==2.4.0
+django-sekizai==2.0.0
+djangorestframework==3.14.0
+et-xmlfile==1.1.0
+evennia==2.3.0
+fastjsonschema==2.19.1
+filelock==3.12.3
+fonttools==4.42.1
+fqdn==1.5.1
+frozenlist==1.4.0
+fsspec==2023.6.0
+huggingface-hub==0.22.1
+hyperlink==21.0.0
+idna==3.4
+incremental==22.10.0
+inflect==7.0.0
+isoduration==20.11.0
+isort==5.12.0
+Jinja2==3.0.3
+jsonpointer==2.4
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
+jupyter-events==0.7.0
+jupyter-ydoc==1.0.2
+jupyter_collaboration==1.2.0
+jupyter_server==2.7.3
+jupyter_server_fileid==0.9.0
+jupyter_server_terminals==0.4.4
+kiwisolver==1.4.5
+lunr==0.6.0
+marisa-trie==1.2.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib==3.7.3
 mdurl==0.1.2
-ml-dtypes==0.3.2
-namex==0.0.8
-nltk==3.8.1
-numpy==1.26.4
-opt-einsum==3.3.0
-optree==0.11.0
-packaging==24.1
-protobuf==4.25.3
-Pygments==2.18.0
-regex==2024.5.15
-requests==2.32.3
-rich==13.7.1
-scikit-learn==1.5.0
-scipy==1.13.1
-setuptools==70.1.0
+mock==5.1.0
+model-mommy==2.0.0
+multidict==6.0.4
+murmurhash==1.0.10
+mypy-extensions==1.0.0
+networkx==3.1
+numpy==1.25.2
+openpyxl==3.1.2
+overrides==7.4.0
+packaging==23.1
+pandas==2.1.1
+parameterized==0.8.1
+pathspec==0.11.2
+Pillow==10.0.0
+platformdirs==4.0.0
+preshed==3.0.9
+pyarrow==13.0.0
+pycairo==1.25.1
+pycallgraph2==1.1.3
+pycparser==2.21
+pycryptodome==3.19.0
+pydantic==2.5.1
+pydantic_core==2.14.3
+pyelftools==0.30
+pygame==2.5.2
+Pygments==2.17.2
+pyparsing==3.1.1
+pyserial==3.5
+python-dateutil==2.8.2
+python-decouple==3.8
+python-dotenv==1.0.1
+python-json-logger==2.0.7
+pytz==2023.3.post1
+pywin32==306
+PyYAML==6.0.1
+referencing==0.30.2
+regex==2023.12.25
+requests==2.31.0
+safetensors==0.4.2
+shellingham==1.5.4
+simpleeval==0.9.13
 six==1.16.0
-tensorboard==2.16.2
-tensorboard-data-server==0.7.2
-tensorflow==2.16.1
-tensorflow-intel==2.16.1
-termcolor==2.4.0
-threadpoolctl==3.5.0
-tqdm==4.66.4
-typing_extensions==4.12.2
-urllib3==2.2.2
-Werkzeug==3.0.3
-wheel==0.43.0
+smart-open==7.0.4
+snowballstemmer==2.2.0
+sortedcontainers==2.4.0
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+sphinxcontrib-jsmath==1.0.1
+sqlparse==0.4.4
+srsly==2.4.8
+tbb==2021.13.0
+tokenizers==0.15.2
+tqdm==4.66.2
+traitlets==5.14.1
+transformers==4.39.2
+Twisted==22.10.0
+twisted-iocpsupport==1.0.4
+txaio==23.1.1
+typing==3.7.4.3
+typing_extensions==4.7.1
+tzdata==2023.3
+unicorn==2.0.1.post1
+uritemplate==4.1.1
+urllib3==2.0.4
+wasabi==1.1.3
+webencodings==0.5.1
+websocket-client==1.7.0
 wrapt==1.16.0
 xxhash==3.3.0
 y-py==0.6.2
